FoxBox snapshot (2ab8e35, 2026-09-27)
